# itapc

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  config_parser.py  gui.py  main.py  response.py  samples.py
app/static/css/: base.css  logs.css  tools.css  view.css
app/static/js/: tools.js  view-chart.js  view.js
app/templates/: _modal.html  base.html  chart.html  logs.html  nav.html  tools.html  view.html
ita/: __init__.py
tests/: test_app.py
tools/: filelines.py  shortcuts.py
